# pulse-visualizer

./: Visualizer.hs  visualizer.cabal
Visualizer/: Audio.hs  Graphics.hs
shaders/: cube.frag  cube.vert  quad.frag  quad.vert
